tests/baselines/reference/APISample_WatchWithDefaults.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8913,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8913,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9173,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9173,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9523,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9523,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9547,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9547,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9634,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9634,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10799,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10799,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10810,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10810,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10820,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10820,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10895,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10895,47): error TS1005: ';' expected.
typescript_standalone.d.ts(10952,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10952,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11006,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11006,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11026,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11026,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11036,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11036,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11070,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11070,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11073,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11073,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11077,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11077,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11095,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11095,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11121,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11121,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11124,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11124,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11136,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11136,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11166,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11166,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11200,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11200,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11211,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11211,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11235,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11235,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11243,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11243,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11247,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11247,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11277,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11277,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11320,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11320,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11507,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11507,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11509,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11509,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11513,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11513,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11515,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11515,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11517,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11517,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11519,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11519,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11521,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11521,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11530,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11530,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11532,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11532,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11534,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11534,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11536,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11536,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11538,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11538,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11540,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11540,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11542,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11542,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11544,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11544,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11546,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11546,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11548,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11548,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11550,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11550,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11552,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11552,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11554,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11554,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11556,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11556,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11558,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11558,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11568,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11568,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11570,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11570,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11572,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11572,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11574,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11574,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11576,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11576,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11578,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11578,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11656,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11656,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11658,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11658,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11660,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11660,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11662,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11662,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11738,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11738,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_WatchWithDefaults.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. This uses default sys interface without having to pass anything
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var console: any;
    
    import ts = require("typescript");
    
    function watchMain() {
        const configPath = ts.findConfigFile(/*searchPath*/ "./", ts.sys.fileExists, "tsconfig.json");
        if (!configPath) {
            throw new Error("Could not find a valid 'tsconfig.json'.");
        }
    
        // TypeScript can use several different program creation "strategies":
        //  * ts.createEmitAndSemanticDiagnosticsBuilderProgram,
        //  * ts.createSemanticDiagnosticsBuilderProgram
        //  * ts.createAbstractBuilder
        // The first two produce "builder programs". These use an incremental strategy to only re-check and emit files whose
        // contents may have changed, or whose dependencies may have changes which may impact change the result of prior type-check and emit.
        // The last uses an ordinary program which does a full type check after every change.
        // Between `createEmitAndSemanticDiagnosticsBuilderProgram` and `createSemanticDiagnosticsBuilderProgram`, the only difference is emit.
        // For pure type-checking scenarios, or when another tool/process handles emit, using `createSemanticDiagnosticsBuilderProgram` may be more desirable.
    
        // Note that there is another overload for `createWatchCompilerHost` that takes a set of root files.
        const host = ts.createWatchCompilerHost(configPath, {}, ts.sys);
    
        // You can technically override any given hook on the host, though you probably don't need to.
        // Note that we're assuming `origCreateProgram` and `origPostProgramCreate` doesn't use `this` at all.
        const origCreateProgram = host.createProgram;
        host.createProgram = (rootNames, options, host, oldProgram) => {
            console.log("** We're about to create the program! **");
            return origCreateProgram(rootNames, options, host, oldProgram);
        }
        const origPostProgramCreate = host.afterProgramCreate;
    
        host.afterProgramCreate = program => {
            console.log("** We finished making the program! **");
            origPostProgramCreate!(program);
        };
    
        // `createWatchProgram` creates an initial program, watches files, and updates the program over time.
        ts.createWatchProgram(host);
    }
    
    watchMain();
    